--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -19,9 +19,10 @@ pluginManagement {
 }
 
 plugins {
+    // ✅ Explicit versions fix "plugin not found" errors on CI
+    id "com.android.application" version "8.1.0" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.22" apply false
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" apply false
-    id "org.jetbrains.kotlin.android" apply false
 }
 
 dependencyResolutionManagement {
