--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -19,14 +19,14 @@ pluginManagement {
 }
 
 plugins {
-    // ✅ Explicit versions fix "plugin not found" errors on CI
+    // Explicit versions for CI
     id "com.android.application" version "8.1.0" apply false
     id "org.jetbrains.kotlin.android" version "1.9.22" apply false
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
 }
 
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    // NOTE: No repositoriesMode line here — allow project repositories if present.
     repositories {
         google()
         mavenCentral()
