--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,14 +8,14 @@ android {
     // Must match AndroidManifest.xml package
     namespace "com.example.meditour"
 
-    // Explicit SDKs (no Flutter variables)
-    compileSdk 35
+    // Explicit SDKs
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.example.meditour"
-        minSdk 26              // Jitsi requires 26+
-        targetSdk 35
-        versionCode 1          // adjust later as needed
+        minSdk 26          // Jitsi needs 26+
+        targetSdk 36
+        versionCode 1
         versionName "1.0.0"
     }
 
