--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -19,9 +19,9 @@ pluginManagement {
 }
 
 plugins {
-    // ⬅ bump AGP to 8.1.1 (Flutter requires ≥ 8.1.1)
-    id "com.android.application" version "8.1.1" apply false
-    id "org.jetbrains.kotlin.android" version "1.9.22" apply false
+    // ✅ Flutter warns to use ≥8.6.0 – use 8.6.0 + Kotlin 2.1.0
+    id "com.android.application" version "8.6.0" apply false
+    id "org.jetbrains.kotlin.android" version "2.1.0" apply false
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
 }
 
