--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
 }
 
 android {
-    // Must match AndroidManifest.xml package
     namespace "com.example.meditour"
 
     // SDKs
@@ -13,23 +12,19 @@ android {
 
     defaultConfig {
         applicationId "com.example.meditour"
-        minSdk 26          // Jitsi needs 26+
+        minSdk 26
         targetSdk 36
         versionCode 1
         versionName "1.0.0"
     }
 
-    // Make debug/profile resolve RELEASE deps (avoids react-android *-debug.aar)
+    // Use release dependency variants for debug/profile (avoids heavy debug AARs)
     buildTypes {
-        debug {
-            matchingFallbacks = ['release']
-        }
-        profile {
-            matchingFallbacks = ['release']
-        }
+        debug { matchingFallbacks = ['release'] }
+        profile { matchingFallbacks = ['release'] }
     }
 
-    // Avoid duplicate META-INF warnings from some AARs
+    // Avoid duplicate META-INF entries
     packaging {
         resources {
             excludes += ["META-INF/AL2.0", "META-INF/LGPL2.1"]
@@ -41,14 +36,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-    kotlinOptions {
-        jvmTarget = '17'
-    }
+    kotlinOptions { jvmTarget = '17' }
 }
 
-flutter {
-    source '../..'
-}
+flutter { source '../..' }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
