--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,9 +1,3 @@
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-
-# CI memory tuning (helps Jetifier on remote runners)
-org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 -XX:MaxMetaspaceSize=1024m
-org.gradle.workers.max=1
-
-kotlin.code.style=official
-kotlin.daemon.jvm.options=-Xmx2048m
