--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -13,13 +13,12 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
-        // Jitsi maven
+        // Jitsi
         maven { url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases" }
     }
 }
 
 plugins {
-    // ✅ Flutter warns to use ≥8.6.0 – use 8.6.0 + Kotlin 2.1.0
     id "com.android.application" version "8.6.0" apply false
     id "org.jetbrains.kotlin.android" version "2.1.0" apply false
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
@@ -29,7 +28,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        // Jitsi maven
+        // Jitsi
         maven { url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases" }
     }
 }
